# macecraft

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  premake5.lua
embed/shaders/: default.frag  default.vert
embed/textures/: debug.raw  dirt.png.bytes  dirt.raw
include/: VAO.h  camera.h  shader.h  texture.h
libs/: CMakeLists.txt  glad.lua  glfw.lua  glm.lua  imgui.lua  premake5.lua
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui-docking/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt  premake5.lua
libs/stb_to_file/: CMakeLists.txt  main.cpp
res/shaders/: block.frag  block.vert  default.frag  default.vert  ui.frag  ui.vert
res/textures/: debug.xcf  debug2.xcf  dirt.xcf  grass_sides.xcf  grass_top.xcf
scripts/: image_flipper.py  image_to_raw.py  setup_vs2022.bat
src/: BlockData.cpp  BlockData.h  BlockType.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.cpp~  Chunk.h  EBO.h  Game.cpp  Game.h  Layer.cpp  Layer.h  PlayerLayer.cpp  PlayerLayer.h  Renderer.cpp  Renderer.h  Renderer.tpp  Shader.cpp  Shader.h  TestLayer.cpp  TestLayer.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  TextureAtlas.cpp  TextureAtlas.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  VertexData.h  World.cpp  World.h  WorldLayer.cpp  WorldLayer.h  aabb.rs  block.cpp  block.h  (+35 more)
src/2DFrustumCulling/: Frustum.cpp  Frustum.h  Line.h
src/FrustumCulling/: Frustum.cpp  Frustum.h  Line.h  Plane.cpp  Plane.h
src/renderer/: chunk.rs  chunk_mesh.rs  imgui.rs  mod.rs  outline.rs  ui.rs
src/shaders/: chunk.wgsl  color.wgsl
src/textures/: textures.xcf
