[package]
name = "macecraft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
env_logger = "0.11.8"
glam = "0.30.9"
image = "0.25.9"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.12"
imgui = "0.12.0"
imgui-winit-support = "0.13.0"
imgui-wgpu = { git = "https://github.com/radeuoj/imgui-wgpu-rs" }

